fix image ratio stretch in css

--- a/inc/scss/_images.scss
+++ b/inc/scss/_images.scss
@@ -2,18 +2,18 @@
 /// Images
 ///
 
-#cover {
-    width: $page_width;
-    height: $page_height;
+#cover,
+.figure {
+    text-align: center;
+    width: 100%;
+    height: 100%;
     margin: 0;
     padding: 0;
+    page-break-inside: avoid;
 
     img {
-        text-align: center;
-        width: 100%;
-        height: auto;
-        margin: 0;
-        padding: 0;
+        // width: 100%;
+        // max-height: 100%;
     }
 }
 
@@ -21,4 +21,10 @@
     img {
         // margin-top: 1.625em;
     }
+}
+
+.figure img {
+  max-width: 100%;
+  max-height: 100%;
+  page-break-inside: avoid;
 }
